--- a/static/style.css
+++ b/static/style.css
@@ -164,16 +164,73 @@ a {
 }
 
 .create-task-container {
+    font-family: "Montserrat Alternates", sans-serif;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
-.create-task-container>label {
-    font-family: "Montserrat Alternates", sans-serif;
-    flex-direction: column;
-}
-
-.create-task-container>h1 {
-    font-family: "Montserrat Alternates", sans-serif;
+.create-task-container h1 {
     border-bottom: 1px solid #aeaeae;
+    padding-bottom: 0.5rem;
 }
+
+
+
+.form-sections {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.left-section, .right-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+.left-section input,
+.left-section select,
+.left-section textarea {
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+.right-section {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.right-section .categories {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.3rem 1rem;
+}
+
+.right-section p {
+    margin-bottom: 0.3rem;
+}
+
+.right-section label {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.form-submit {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.form-submit button {
+    margin-top: 2rem;
+}
+
+
