Added post router for edit task

--- a/templates/edit-task.html
+++ b/templates/edit-task.html
@@ -3,7 +3,7 @@
 {% block title %}Редактирование задачи{% endblock %}
 
 {% block content %}
-<div class="edit-task-container">
+<div class="create-task-container">
     <h1>Редактирование задачи</h1>
     {% if success %}
     <p style="color: green" class="success-message">Изменения успешно сохранены!</p>
