--- a/static/style.css
+++ b/static/style.css
@@ -317,6 +317,70 @@ a {
 .delete-account-form {
     display: flex;
     margin-top: 9rem;
-    margin-left: 5rem;
+    margin-left: 5rem;  
     gap: 3rem;
+}
+
+.edit-categories-container {
+    font-family: "Montserrat Alternates", sans-serif;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.edit-categories-container > h1 {
+    border-bottom: 1px solid #aeaeae;
+    padding-bottom: 0.5rem;
+}
+
+.form-edit-categories {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+
+.left-block, .right-block {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+}
+
+.left-block {
+    border-right: 1px solid #aeaeae;
+}
+
+.left-block input{
+    margin-bottom: 1rem;
+    border-radius: 10px;
+    padding: 1rem;
+    font-size: 1rem;
+}
+
+.left-block button {
+    margin-top: 2rem;
+}
+
+.right-block {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.right-block .categories {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.3rem 1rem;
+}
+
+.right-block label {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.right-block button {
+    margin-top: 2rem;
 }
