--- a/templates/home.html
+++ b/templates/home.html
@@ -7,11 +7,19 @@
   {% if error %}
   <p style="color: red">{{ error }}</p>
   {% endif %}
-  <h1>Добро пожаловать на FlapTask!</h1>
-  <p>сервис для управления вашими задачами</p>
-  <div class="buttons">
-    <a href="/login"><button class="btn">Войти</button></a>
-    <a href="/register"><button class="btn">Регистрация</button></a>
-  </div>
+    <h1>Добро пожаловать на FlapTask!</h1>
+    <p>сервис для управления вашими задачами</p>
+  {% if current_user %}
+    <div class="buttons">
+      <a href="/tasks"><button class="btn">Задачи</button></a>
+      <a href="/dashboard"><button class="btn">Личный кабинет</button></a>
+      <a href="/create-task"><button class="btn">Создать задачу</button></a>
+    </div>
+  {% else %}
+    <div class="buttons">
+      <a href="/login"><button class="btn">Войти</button> </a>
+      <a href="/register"><button class="btn">Регистрация</button> </a>
+    </div>
+  {% endif %}
 </div>
 {% endblock %}
