--- a/templates/edit-categories.html
+++ b/templates/edit-categories.html
@@ -10,7 +10,7 @@
   {% if error %}
   <p style="color: red">{{ error }}</p>
   {% elif success %}
-  <p style="color: green">Данные успешно изменены</p>
+  <p style="color: #98FB98">Данные успешно изменены</p>
   {% endif %}
 
   <div class="form-edit-categories">
