--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Montserrat Alternate", sans-serif;
+    font-family: "Montserrat Alternates", sans-serif;
     background-color: #d9fbff;
     color: #333;
 
