--- a/templates/edit-task.html
+++ b/templates/edit-task.html
@@ -6,7 +6,7 @@
 <div class="create-task-container">
     <h1>Редактирование задачи</h1>
     {% if success %}
-    <p style="color: green" class="success-message">Изменения успешно сохранены!</p>
+    <p style="color: #98FB98" class="success-message">Изменения успешно сохранены!</p>
     {% elif error %}
     <p style="color: red" class="error-message">{{ error }}</p>
     {% endif %}
