--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -6,7 +6,7 @@
 <div class="tasks-container">
   <h1>Задачи пользователя {{ user_name }}</h1>
   {% if success %}
-  <p style="color: green;">Задача успешно удалена</p>
+  <p style="color: #98FB98;">Задача успешно удалена</p>
   {% elif error %}
   <p style="color: red;">{{ error }}</p>
   {% endif %}
