--- a/static/style.css
+++ b/static/style.css
@@ -2,8 +2,8 @@ body {
     font-family: "Montserrat Alternates", sans-serif;
     background-color: #d9fbff;
     color: #333;
-
     padding: 0;
+    margin: 0;
 }
 
 .welcome-container {
