--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,11 @@
                 <li><a href="/login">Войти</a></li>
                 <li><a href="/register">Регистрация</a></li>
             {% endif %}
+            {% if request.state.is_gui %}
+                <div>GUI MODE</div>
+            {% else %}
+                <div>WEB MODE</div>
+            {% endif %}
         </ul>
     </nav>
 </header>
